fix overflow on header

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,6 +5,7 @@
     .header-pledge--CTA {
         flex: 2;
         display: flex;
+        overflow: hidden;
         position: relative;
         align-content: end;
         justify-content: flex-end;
